@@ -1,3 +1,9 @@
+2010-09-16  Stas Boukarev  <stassats@gmail.com>
+
+	* swank-arglists.lisp (print-variable-to-string): Use
+	without-printing-errors when printing the value.
+	Reported by Tobias C. Rittweiler on lp#628945.
+
 2010-09-16  Christophe Rhodes  <csr21@cantab.net>
 
 	Image display support for the REPL.
